--- a/CurrencyConverter/CurrencyConverter/Resources/Localizable.strings
+++ b/CurrencyConverter/CurrencyConverter/Resources/Localizable.strings
@@ -19,6 +19,7 @@ alert.button.no = "No";
 /* Convert */
 
 convert.nav.title = "Convert";
+convert.conversion-info = "This transaction has commission rate of %@ which amounts to %@.\nA total of %@ will be deducted from your balance and you will receive a total of %@.";
 
 /* Endpoint */
 
