--- a/CurrencyConverter/CurrencyConverter/Resources/Localizable.strings
+++ b/CurrencyConverter/CurrencyConverter/Resources/Localizable.strings
@@ -23,7 +23,7 @@ alert.button.no = "No";
 /* Convert */
 
 convert.nav.title = "Convert";
-convert.conversion-info = "This transaction has commission rate of %@ which amounts to %@.\nA total of %@ will be deducted from your balance and you will receive a total of %@.";
+convert.conversion-info = "This transaction has a commission rate of %@ that amounts to %@.\nA total of %@ will be deducted from your wallet and you will receive a total of %@.";
 
 /* Endpoint */
 
